--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Home"
-    url: /pages/about/
+    url: /home/
 
   - title: "Publications"
     url: /publications/    
