--- a/_config.yml
+++ b/_config.yml
@@ -243,6 +243,14 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _home
+  - scope:
+      path: ""
+      type: home
+    values:
+      layout: single
+      author_profile: true
+      share: true
 
 # Sass/SCSS
 sass:
