change profile URLs

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Personal health informatics researcher"
   location         : "University of Michigan, Ann Arbor"
   employer         :
-  googlescholar    : "https://scholar.google.com/citations?user=JX6DvU4AAAAJ&hl=en&authuser=1"
+  googlescholar    : "https://scholar.google.com/citations?user=JX6DvU4AAAAJ"
   email            :
   researchgate     : "https://www.researchgate.net/profile/Shriti-Raj"
   uri              :
