updated cofig about me

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shriti Raj"
   avatar           : "SR_pic.jpeg"
-  bio              : "Personal health informatics researcher"
+  bio              : "HCI and health informatics researcher"
   location         : "University of Michigan, Ann Arbor"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=JX6DvU4AAAAJ"
